--- a/MD-HT5.ipynb
+++ b/MD-HT5.ipynb
@@ -21,19 +21,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -49,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +235,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,18 +358,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_with_na = datos.isna().any()\n",
+    "# Recorrer todas las columnas y rellenar con 0 donde sea necesario\n",
+    "for column in columns_with_na.index:\n",
+    "    if columns_with_na[column]:\n",
+    "        datos[column] = datos[column].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlinear_model\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LinearRegression\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m mean_squared_error\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 34763.830779939504\n",
+      "Coeficientes: [-2.70217283e+00 -9.12437414e+01 -1.58423558e+03 -3.63877523e+01\n",
+      "  3.62983231e-01  1.93739866e+04  3.67207851e+03 -1.19308397e+03\n",
+      "  2.94577704e+02 -5.28946762e+04  7.95945121e+02 -2.95017344e-11\n",
+      "  4.65003528e+02 -4.96710732e+02 -1.26124398e+04 -1.98914748e+03\n",
+      " -1.49298188e+03  1.64089021e+04  4.55507787e+03  3.24643577e+02\n",
+      "  1.72000067e+02  2.79396813e+03  3.16742816e+03 -8.79231080e+02\n",
+      "  3.10480353e+02  6.28226664e+03  4.29213773e+01  5.25233190e-11\n",
+      "  5.50244295e-11  3.82112666e+03 -1.09139364e-10 -9.68611857e-11\n",
+      "  5.09317033e-11  8.36735126e-11  6.61133710e+00 -1.13686838e-11\n",
+      "  2.14695360e-01 -9.03881652e-01  5.92215085e+00 -2.07013710e+03\n",
+      " -1.45519152e-11 -4.98138083e+03  0.00000000e+00  1.66904123e+01\n",
+      "  1.72919050e+01 -8.57629642e+00  2.54060209e+01  1.15427248e+04\n",
+      "  2.05242828e+03  3.38830227e+03 -2.39665143e+03 -7.78831112e+03\n",
+      " -2.01863264e+04 -2.18278728e-11  5.29677928e+03  3.58867332e+03\n",
+      "  5.25228634e+03  4.27462510e-11  4.72186146e+02 -1.22877473e+01\n",
+      "  0.00000000e+00  1.73869708e+04  6.13449198e-01  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00  2.31571803e+01 -8.61096084e+00\n",
+      "  1.00107477e+01  4.07946555e+01  6.54048326e+01 -1.81224863e+01\n",
+      "  0.00000000e+00  0.00000000e+00  8.69391084e+02 -1.56277314e-02\n",
+      " -2.18981086e+02 -5.81744024e+02 -6.20509852e+02  2.22296712e+03]\n"
      ]
     }
    ],
@@ -443,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
