Aplicando Bayes ingenuo

--- a/MD-HT5.ipynb
+++ b/MD-HT5.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,62 +371,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 34763.830779939504\n",
-      "Coeficientes: [-2.70217283e+00 -9.12437414e+01 -1.58423558e+03 -3.63877523e+01\n",
-      "  3.62983231e-01  1.93739866e+04  3.67207851e+03 -1.19308397e+03\n",
-      "  2.94577704e+02 -5.28946762e+04  7.95945121e+02 -2.95017344e-11\n",
-      "  4.65003528e+02 -4.96710732e+02 -1.26124398e+04 -1.98914748e+03\n",
-      " -1.49298188e+03  1.64089021e+04  4.55507787e+03  3.24643577e+02\n",
-      "  1.72000067e+02  2.79396813e+03  3.16742816e+03 -8.79231080e+02\n",
-      "  3.10480353e+02  6.28226664e+03  4.29213773e+01  5.25233190e-11\n",
-      "  5.50244295e-11  3.82112666e+03 -1.09139364e-10 -9.68611857e-11\n",
-      "  5.09317033e-11  8.36735126e-11  6.61133710e+00 -1.13686838e-11\n",
-      "  2.14695360e-01 -9.03881652e-01  5.92215085e+00 -2.07013710e+03\n",
-      " -1.45519152e-11 -4.98138083e+03  0.00000000e+00  1.66904123e+01\n",
-      "  1.72919050e+01 -8.57629642e+00  2.54060209e+01  1.15427248e+04\n",
-      "  2.05242828e+03  3.38830227e+03 -2.39665143e+03 -7.78831112e+03\n",
-      " -2.01863264e+04 -2.18278728e-11  5.29677928e+03  3.58867332e+03\n",
-      "  5.25228634e+03  4.27462510e-11  4.72186146e+02 -1.22877473e+01\n",
-      "  0.00000000e+00  1.73869708e+04  6.13449198e-01  0.00000000e+00\n",
-      "  0.00000000e+00  0.00000000e+00  2.31571803e+01 -8.61096084e+00\n",
-      "  1.00107477e+01  4.07946555e+01  6.54048326e+01 -1.81224863e+01\n",
-      "  0.00000000e+00  0.00000000e+00  8.69391084e+02 -1.56277314e-02\n",
-      " -2.18981086e+02 -5.81744024e+02 -6.20509852e+02  2.22296712e+03]\n"
+      "SalePriceCategory\n",
+      "Alto     497\n",
+      "Bajo     483\n",
+      "Medio    480\n",
+      "Name: count, dtype: int64\n",
+      "Accuracy: 0.7945205479452054\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        Alto       0.83      0.87      0.85        95\n",
+      "        Bajo       0.82      0.90      0.86       110\n",
+      "       Medio       0.69      0.57      0.63        87\n",
+      "\n",
+      "    accuracy                           0.79       292\n",
+      "   macro avg       0.78      0.78      0.78       292\n",
+      "weighted avg       0.79      0.79      0.79       292\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from math import sqrt\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
     "\n",
-    "X = datos.drop('SalePrice', axis=1)\n",
-    "y = datos['SalePrice']\n",
+    "#Preparación de los Datos\n",
     "\n",
-    "# Dividir en conjuntos de entrenamiento y prueba\n",
+    "# Definir los límites de las categorías basadas en los percentiles\n",
+    "bins = datos['SalePrice'].quantile([0, 0.33, 0.66, 1]).values\n",
+    "\n",
+    "# Crear las categorías\n",
+    "datos['SalePriceCategory'] = pd.cut(datos['SalePrice'], bins, labels=['Bajo', 'Medio', 'Alto'], include_lowest=True)\n",
+    "\n",
+    "# Verificar cómo quedaron distribuidas las categorías\n",
+    "print(datos['SalePriceCategory'].value_counts())\n",
+    "\n",
+    "X = datos.drop(['SalePrice', 'SalePriceCategory'], axis=1)\n",
+    "y = datos['SalePriceCategory']\n",
+    "\n",
+    "\n",
+    "#Division de conjunto de datos\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Entrenar un modelo de regresión lineal\n",
-    "model = LinearRegression()\n",
+    "#Aplicamos Naive Bayes\n",
+    "\n",
+    "# Inicializar y entrenar el modelo\n",
+    "model = GaussianNB()\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "# Realizar predicciones sobre el conjunto de prueba\n",
+    "# Realizar predicciones\n",
     "y_pred = model.predict(X_test)\n",
     "\n",
-    "# Calcular y mostrar el error cuadrático medio (RMSE)\n",
-    "rmse = sqrt(mean_squared_error(y_test, y_pred))\n",
-    "print(f'RMSE: {rmse}')\n",
-    "\n",
-    "# Coeficientes\n",
-    "print(f'Coeficientes: {model.coef_}')"
+    "# Evaluar el modelo\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f'Accuracy: {accuracy}')\n",
+    "print(classification_report(y_test, y_pred))"
    ]
   },
   {
