--- a/MD-HT5.ipynb
+++ b/MD-HT5.ipynb
@@ -702,12 +702,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modelo de regresión"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "# Hiperparámetros a probar\n",
+    "param_grid = {'var_smoothing': np.logspace(0,-9, num=100)}\n",
+    "\n",
+    "# Inicializar y entrenar el modelo con GridSearchCV\n",
+    "model = GaussianNB()\n",
+    "grid_search = GridSearchCV(model, param_grid, cv=5, scoring='neg_mean_squared_error')\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "# Mejor modelo\n",
+    "best_model_regression = grid_search.best_estimator_\n",
+    "\n",
+    "# Realizar predicciones\n",
+    "y_pred = best_model_regression.predict(X_test)\n",
+    "\n",
+    "# Evaluar el modelo\n",
+    "print(f'RMSE: {mean_squared_error(y_test, y_pred, squared=False)}')\n",
+    "print(f'R2: {best_model_regression.score(X_test, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modelo de comparación"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "grid_search_clf = GridSearchCV(model, param_grid, cv=5, scoring='accuracy')\n",
+    "grid_search_clf.fit(X_train, y_train)\n",
+    "\n",
+    "# Mejor modelo\n",
+    "best_model_classification = grid_search_clf.best_estimator_\n",
+    "\n",
+    "# Realizar predicciones\n",
+    "y_pred = best_model_classification.predict(X_test)\n",
+    "\n",
+    "# Evaluar el modelo\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f'Accuracy: {accuracy}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inciso 11\n",
+    "### Compación de árbol de decisión de clasificación y el modelo de random forest."
    ]
   }
  ],
@@ -727,7 +789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
