--- a/MD-HT5.ipynb
+++ b/MD-HT5.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -710,29 +710,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:737: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 50964.846333831425\n",
+      "R2: 0.0136986301369863\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Python311\\Lib\\site-packages\\sklearn\\metrics\\_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.metrics import mean_squared_error, accuracy_score\n",
     "\n",
-    "# Hiperparámetros a probar\n",
-    "param_grid = {'var_smoothing': np.logspace(0,-9, num=100)}\n",
+    "# Asumiendo que `datos` es tu DataFrame\n",
+    "X = datos.drop(['SalePrice', 'SalePriceCategory'], axis=1)\n",
+    "y = datos['SalePrice']\n",
     "\n",
-    "# Inicializar y entrenar el modelo con GridSearchCV\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "param_grid = {'var_smoothing': np.logspace(0, -9, num=100)}\n",
     "model = GaussianNB()\n",
     "grid_search = GridSearchCV(model, param_grid, cv=5, scoring='neg_mean_squared_error')\n",
     "grid_search.fit(X_train, y_train)\n",
     "\n",
-    "# Mejor modelo\n",
     "best_model_regression = grid_search.best_estimator_\n",
-    "\n",
-    "# Realizar predicciones\n",
     "y_pred = best_model_regression.predict(X_test)\n",
     "\n",
-    "# Evaluar el modelo\n",
     "print(f'RMSE: {mean_squared_error(y_test, y_pred, squared=False)}')\n",
-    "print(f'R2: {best_model_regression.score(X_test, y_test)}')"
+    "print(f'R2: {best_model_regression.score(X_test, y_test)}')\n"
    ]
   },
   {
@@ -744,24 +772,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7831050228310502\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
+    "# Asumiendo que `datos` ya tiene la columna `SalePriceCategory` creada\n",
+    "X = datos.drop(['SalePrice', 'SalePriceCategory'], axis=1)\n",
+    "y = datos['SalePriceCategory']\n",
     "\n",
-    "grid_search_clf = GridSearchCV(model, param_grid, cv=5, scoring='accuracy')\n",
-    "grid_search_clf.fit(X_train, y_train)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
     "\n",
-    "# Mejor modelo\n",
-    "best_model_classification = grid_search_clf.best_estimator_\n",
+    "param_grid = {'var_smoothing': np.logspace(0, -9, num=100)}\n",
+    "model = GaussianNB()\n",
+    "grid_search = GridSearchCV(model, param_grid, cv=5, scoring='accuracy')\n",
+    "grid_search.fit(X_train, y_train)\n",
     "\n",
-    "# Realizar predicciones\n",
+    "best_model_classification = grid_search.best_estimator_\n",
     "y_pred = best_model_classification.predict(X_test)\n",
     "\n",
-    "# Evaluar el modelo\n",
-    "accuracy = accuracy_score(y_test, y_pred)\n",
-    "print(f'Accuracy: {accuracy}')"
+    "print(f'Accuracy: {accuracy_score(y_test, y_pred)}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Al comparar ambos modelos, aunque el modelo de regresión no parece tener un buen ajuste con los datos (bajo R2 y alto RMSE), el modelo de clasificación muestra una precisión relativamente alta. Esto sugiere que, el modelo es bastante bueno clasificando las propiedades en las categorías de precios correctas.\n",
+    "\n",
+    "Por lo tanto, el mejor modelo del tunneo es el de clasificación debido a su mayor precisión. Este resultado indica que, para este conjunto de datos y con el tipo de análisis realizado, la clasificación de precios en categorías es una tarea más confiable y precisa que la predicción del precio exacto."
    ]
   },
   {
@@ -789,7 +835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
