--- a/MD-HT5.ipynb
+++ b/MD-HT5.ipynb
@@ -817,6 +817,32 @@
     "### Inciso 11\n",
     "### Compación de árbol de decisión de clasificación y el modelo de random forest."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random Forestn HT4:\n",
+    "La precisión del Random Forest en el conjunto de prueba es: 0.84\n",
+    "Precisión promedio de Random Forest con validación cruzada: 0.84 +/- 0.01\n",
+    "\n",
+    "Modelo de clasificación HT5:\n",
+    "Accuracy in train: 0.7818003913894325\n",
+    "Accuracy in test: 0.7831050228310502\n",
+    "\n",
+    "\n",
+    "Comparación:\n",
+    "- En términos de precisión, el Random Forest tiene un mejor rendimiento con un 0.84 de precisión tanto en el conjunto de prueba como en la validación cruzada. Esto indica que es más efectivo para predecir las categorías de precios en comparación con el Naive Bayes.\n",
+    "\n",
+    "- Random Forest tiende a ser más lento en entrenamiento y predicción en comparación con Naive Bayes, debido a que construye múltiples árboles de decisión y utiliza técnicas de ensamblado, lo que requiere más cálculos.\n",
+    "\n",
+    "- Naive Bayes es generalmente rápido para entrenar y hacer predicciones debido a la simplicidad del modelo y las suposiciones de independencia entre las características.\n",
+    "\n",
+    "\n",
+    "Conclusión:\n",
+    "- Si la precisión es la principal preocupación, el Random Forest es el mejor modelo entre los mencionados.\n",
+    "- Si el tiempo de procesamiento es una consideración crítica, Naive Bayes puede ser preferible debido a su rapidez."
+   ]
   }
  ],
  "metadata": {
